--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" type="text/css" href="abg-advice/index.css">
+  <link rel="stylesheet" type="text/css" href="https://github.com/PolishedLinsey/abg-advice/blob/main/index.css">
   <!-- I understand that I am supposed create a style guide, but I find it more practical and fun to develop a vision for what I want my website to look like, then simply look up how to make that happen (i.e. looking at a font family list, then selecting a font family that would look good.) I'm taking a learn-as-I-go-along approach. -->
   <head>
     <title>Atlanta Botanical Garden</title>
