--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     </ul>
     <p>I have visited the Atlanta Botanical Garden a few times. The last time I went was in October 2021, with my mother. The weather was perfect and I got to enjoy an expansive Halloween-themed section and a glass flower exhibition, which spanned the entire garden. I must have taken a hundred photos or so!</p>
   </div>
-  <a href="https://atlantabg.org/">Atlanta Botanical Garden!</a>
+  <a href="https://atlantabg.org/" target="_blank">Atlanta Botanical Garden!</a>
 </html>
