--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" type="text/css" href="index.css">
   <!-- I understand that I am supposed create a style guide, but I find it more practical and fun to develop a vision for what I want my website to look like, then simply look up how to make that happen (i.e. looking at a font family list, then selecting a font family that would look good.) I'm taking a learn-as-I-go-along approach. -->
   <head>
-    <title>Atlanta Botanical Garden</title>
+    <title>Atlanta Botanical Garden Visitor Advice</title>
   </head>
   <div class="abg">
     <h1>Atlanta Botanical Garden</h1>
